commit 3 добавлено логирование на сервере